--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -37,7 +37,7 @@ dependencies:
   photo_view: ^0.13.0
   shared_preferences: 2.0.11
   timeago: 3.1.0
-  url_launcher: 6.0.15
+  url_launcher: 5.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,6 +48,15 @@ dependencies:
   flutter_easyloading: any
   pagination_view: ^2.0.0-nullsafety.0
   sharesdk_plugin:
+  flutter_inappwebview:
+  image_picker: ^0.8.5+3
+  chewie: 1.2.2
+  video_player: 2.2.7
+  smooth_page_indicator: ^1.0.0+2
+  percent_indicator: ^4.2.2
+  image_gallery_saver: ^1.7.1
+  flutter_image_compress: ^1.1.0
+  image_cropper: ^2.0.3
 dev_dependencies:
   faker: ^2.0.0
   flutter_test:
@@ -58,7 +67,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -73,7 +81,6 @@ flutter:
     - assets/lottie_animations/
     - assets/rive_animations/
     - assets/pdfs/
-
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
